--- a/app/src/main/res/layout/activity_circle_wave.xml
+++ b/app/src/main/res/layout/activity_circle_wave.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/wash_bg"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.swx.softdraft.CircleWaveActivity">
 
     <FrameLayout
         android:id="@+id/wave_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_gravity="center">
 
         <ImageView
@@ -35,10 +33,55 @@
 
 
     <TextView
+        android:id="@+id/tv_delay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/wave_container"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:text="@string/refresh_delay" />
+
+    <SeekBar
+        android:id="@+id/sb_draw_delay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100" />
+
+
+    <TextView
+        android:id="@+id/tv_dx"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/inc_dx" />
+
+    <SeekBar
+        android:id="@+id/sb_dx"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:max="100" />
+
+    <TextView
+        android:id="@+id/tv_am"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/am_c" />
+
+    <SeekBar
+        android:id="@+id/sb_amplitude"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:max="10" />
+
+    <TextView
+        android:id="@+id/tv_wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wave_c" />
+
+    <SeekBar
+        android:id="@+id/sb_wavec"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:max="10" />
+
+</LinearLayout>
