--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,5 +3,6 @@
     <declare-styleable name="CircleWaveView">
         <attr name="waveColor" format="color" />
         <attr name="circleColor" format="color" />
+        <attr name="waveRadius" format="dimension" />
     </declare-styleable>
 </resources>
