--- a/app/src/main/res/layout/activity_circle_wave.xml
+++ b/app/src/main/res/layout/activity_circle_wave.xml
@@ -19,16 +19,19 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/double_circle" />
+            android:src="@drawable/double_circle"
+            android:visibility="gone" />
 
         <com.swx.softdraft.widget.CircleWaveView
             android:id="@+id/wav_wave"
-            android:layout_width="220dp"
-            android:layout_height="220dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@drawable/double_circle"
             android:visibility="visible"
             app:circleColor="#bbe1e8"
-            app:waveColor="@color/white_20_transparent" />
+            app:waveColor="@color/white_20_transparent"
+            app:waveRadius="110dp" />
     </FrameLayout>
 
 
