--- a/app/src/main/res/layout/activity_circle_wave.xml
+++ b/app/src/main/res/layout/activity_circle_wave.xml
@@ -87,4 +87,17 @@
         android:layout_marginTop="8dp"
         android:max="10" />
 
+    <TextView
+        android:id="@+id/tv_percent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/wave_c" />
+
+    <SeekBar
+        android:id="@+id/sb_percent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:max="100" />
+
 </LinearLayout>
